--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shakib protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+
+
+    <section>
+        <div class="half-witdh">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Shakib Al Hasan</span> world</h1>
+
+            <h3>Build climber and train stopper</h3>
+            <p>I am Shakib Al Hasan My goal is to become a full fledged web developer by 2024. Then to free the youth of
+                this Bangladesh from the curse of unemployment. I want the youth of Bangladesh to become entrepreneurs
+                themselves without running after jobs. Everyone will give for me. So that I do not deviate from my goal
+            </p>
+            <a class="link_button" target="_blank" href="https://github.com/shakib8080">HIRE ME</a>
+        </div>
+        <div class="half-witdh">
+            <img src="final image png.png" alt="" srcset="">
+
+        </div>
+    </section>
+
 </body>
+
 </html>
