--- a/index.html
+++ b/index.html
@@ -1,40 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="final image png.png" type="image/x-icon" />
 
-<head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shakib protfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-
-
+  <body>
     <section>
-        <div class="half-witdh">
-            <h1>Welcome To</h1>
-            <h1><span class="orange">Shakib Al Hasan</span> world</h1>
+      <div class="half-witdh">
+        <h1>Welcome To</h1>
+        <h1><span class="orange">Shakib Al Hasan</span> world</h1>
 
-            <h3>Build climber and train stopper</h3>
-            <p>I am Shakib Al Hasan My goal is to become a full fledged web developer by 2024. Then to free the youth of
-                this Bangladesh from the curse of unemployment. I want the youth of Bangladesh to become entrepreneurs
-                themselves without running after jobs. Everyone will give for me. So that I do not deviate from my goal
-            </p>
-            <a class="link_button" target="_blank" href="https://github.com/shakib8080">HIRE ME</a>
-        </div>
-        <div class="half-witdh">
-            <img src="final image png.png" alt="" srcset="">
-
-        </div>
+        <h3>Build climber and train stopper</h3>
+        <p>
+          I am Shakib Al Hasan My goal is to become a full fledged web developer
+          by 2024. Then to free the youth of this Bangladesh from the curse of
+          unemployment. I want the youth of Bangladesh to become entrepreneurs
+          themselves without running after jobs. Everyone will give for me. So
+          that I do not deviate from my goal
+        </p>
+        <a
+          class="link_button"
+          target="_blank"
+          href="https://github.com/shakib8080"
+          >HIRE ME</a
+        >
+      </div>
+      <div class="half-witdh">
+        <img src="final image png.png" alt="" srcset="" />
+      </div>
     </section>
 
-</body>
+    <section class="section2">
+      <div class="half-witdh">
+        <img src="my pic.png" alt="" />
+      </div>
 
+      <div class="half-witdh2">
+        <p>
+          My mission is to become a good web developer by 2024. And we are
+          moving forward with this goal and everyone will pray for me and my
+          team. And we are moving forward to fulfill this goal. again My mission
+          is to become a good web developer by 2024. And we are moving forward
+          with this goal and everyone will pray for me and my team. And we are
+          moving forward to fulfill this goal
+        </p>
+        <a class="button2" target="_blank" href="https://github.com/shakib8080">
+          JOIN NAW</a
+        >
+      </div>
+    </section>
+
+    <h1 class="ex1">My Mission in 2024</h1>
+    <section class="experiaece-area">
+      <div class="half-witdh3">
+        <img class="img" src="illustrator-1.png" alt="" />
+        <h1 class="title">Full Stack Webdeveloper</h1>
+        <h3>2024- present and pro level developer</h3>
+        <p>
+          My Mission is to become a good web developer by 2024. And we are
+          moving forward with this goal and everyone will pray for me and my
+          team. And we are moving forward to fulfill this goal.
+        </p>
+      </div>
+
+      <div class="half-witdh3">
+        <img class="img" src="illustrator-2.png" alt="" />
+        <h1 class="title">baby Webdeveloper</h1>
+        <p>
+          Both local and global. Since you get to manage your own business, you
+          can determine your rates, work schedule, and even be selective about
+          which clients
+        </p>
+      </div>
+
+      <div class="half-witdh3">
+        <img class="img" src="illustrator-3.png" alt="" />
+        <h1 class="title">goals</h1>
+        <p>
+          Both local and global. Since you get to manage your own business, you
+          can determine your rates, work schedule, and even be selective about
+          which clients
+        </p>
+      </div>
+    </section>
+
+    <section class="section4">
+      <div>
+        <img src="illustrator-2.png" alt="" />
+      </div>
+
+      <div>
+        <h1>Develop <span class="span2">Without</span> Limits</h1>
+
+        <p>
+          I Really want to be a limitless person, I want to be out of everyone's
+          reach. I want to think a little differently than everyone else. I want
+          to be limitless in my learning, I want people to love me for my work.
+          I want to be an exception to everyone. I don't want to surpass
+          anyone.I want to be limitless in my learning, I want people to love me
+          for my work. Know More about Me
+        </p>
+        <a class="button3" target="_blank" href="https://github.com/shakib8080"
+          >Know More about Me</a
+        >
+      </div>
+    </section>
+
+    <section class="section5">
+      <div class="div1">
+        <h1><span class="span2">About</span> My Team</h1>
+        <p>
+          I am very proud of my team members. They try their best. They are a
+          blessing for me. We are all working together for the development of
+          Bangladesh, for the development of the youth of Bangladesh, we are
+          trying our best. My team members are very friendly, they work
+          together. They love to work together, I always pray for them, may God
+          bless them.
+        </p>
+        <a class="button3" href="https://github.com/shakib8080"
+          >Read My Ducoment</a
+        >
+      </div>
+
+      <div class="div1">
+        <img class="img2" src="illustrator-3.png" alt="" />
+      </div>
+    </section>
+    <div class="div2">
+      <h1>My <span class="span3">Team</span> Member</h1>
+    </div>
+
+    <section class="section6">
+      <div class="div3">
+        <img class="img1" src="ashik5.png" alt="" />
+        <h2>MD Shakib Al Hasan</h2>
+        <p>
+          He is ceo from toto komapany. he is a leader of bk army He is ceo from
+          toto komapany. he is a leader of bk army
+        </p>
+        <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
+      </div>
+
+      <div class="div3">
+        <img class="img1" src="ashik5.png" alt="" />
+        <h2>Eyakub Habib</h2>
+        <p>
+          Eyakub habib is a mentor of the tem . he is a founder paradice it. her
+          skill is graphic design and web developement.
+        </p>
+        <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
+      </div>
+
+      <div class="div3">
+        <img class="img1" src="ashik5.png" alt="" />
+        <h2>Refat Ahmed</h2>
+        <p>
+          refat ahmed is a brilliant student in the programming hero bach 5 . he
+          is also a web developer.he spend her time for study
+        </p>
+        <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
+      </div>
+    </section>
+
+    <section class="section6">
+      <div class="div3">
+        <img class="img1" src="ashik5.png" alt="" />
+        <h2>Abdur Rahman</h2>
+        <p>
+          Abdur rahman is must hendsome persone in bangladesh . he also a
+          brilliant developer . now he learn programming hero bach 5
+        </p>
+        <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
+      </div>
+
+      <div class="div3">
+        <img class="img1" src="ashik5.png" alt="" />
+        <h2>Ismail hossain</h2>
+        <p>
+          Ismail hossain is a dedicated learner . her telent is very sharp. he
+          is ver farst lerner ,he also a progmmar
+        </p>
+        <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
+      </div>
+
+      <div class="div3">
+        <img class="img1" src="ashik5.png" alt="" />
+        <h2>naimur Rahman</h2>
+        <p>
+          naimur rahman is a cool person . he is a silent killer. he also learn
+          programming hero. he dosent like fake people
+        </p>
+        <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
+      </div>
+    </section>
+  </body>
 </html>
