--- a/index.html
+++ b/index.html
@@ -204,5 +204,16 @@
         <a class="button4" href="https://github.com/shakib8080"> HIRE ME</a>
       </div>
     </section>
+
+    <div class="div4">
+      <a class="button4" href="https://github.com/shakib8080">
+        More About The Team</a
+      >
+    </div>
+
+    <div class="div5">
+      <h1 class="hed">Mission <span class="span4">2024</span></h1>
+      <p class="des">Hard Work Perseverance and Determanition for 2024</p>
+    </div>
   </body>
 </html>
