--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <section class="section6">
-      <div class="div3">
+      <div id="id1" class="div3">
         <img class="img1" src="ashik5.png" alt="" />
         <h2>MD Shakib Al Hasan</h2>
         <p>
